// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`color-scheme > colors 1`] = `
{
  "candidates": [
    "bg-primary-15-15-10",
  ],
  "css": "@layer utilities {
  .bg-primary-15-15-10 {
    background-color: var(---color-primary-15-15-10);
  }
}
",
  "styles": [],
  "variables": [],
}
`;

exports[`color-scheme > colors 2`] = `
{
  "candidates": [
    "bg-primary-15-15/10",
  ],
  "css": "@layer utilities {
  .bg-primary-15-15\\/10 {
    background-color: var(---color-primary-15-15);
    @supports (color: color-mix(in lab, red, red)) {
      background-color: color-mix(in oklab, var(---color-primary-15-15) 10%, transparent);
    }
  }
}
",
  "styles": [],
  "variables": [],
}
`;

exports[`color-scheme > colors 3`] = `
{
  "candidates": [
    "bg-primary-15-15/[71.37%]",
  ],
  "css": "@layer utilities {
  .bg-primary-15-15\\/\\[71\\.37\\%\\] {
    background-color: var(---color-primary-15-15);
    @supports (color: color-mix(in lab, red, red)) {
      background-color: color-mix(in oklab, var(---color-primary-15-15) 71.37%, transparent);
    }
  }
}
",
  "styles": [],
  "variables": [],
}
`;

exports[`color-scheme > colors 4`] = `
{
  "candidates": [
    "bg-(---color-primary-15-15)",
  ],
  "css": "@layer utilities {
  .bg-\\(---color-primary-15-15\\) {
    background-color: var(---color-primary-15-15);
  }
}
",
  "styles": [],
  "variables": [],
}
`;

exports[`color-scheme > colors 5`] = `
{
  "candidates": [
    "bg-(---color-primary-15-15)/10",
  ],
  "css": "@layer utilities {
  .bg-\\(---color-primary-15-15\\)\\/10 {
    background-color: var(---color-primary-15-15);
    @supports (color: color-mix(in lab, red, red)) {
      background-color: color-mix(in oklab, var(---color-primary-15-15) 10%, transparent);
    }
  }
}
",
  "styles": [],
  "variables": [],
}
`;

exports[`color-scheme > colors 6`] = `
{
  "candidates": [
    "bg-[primary-15-15]",
  ],
  "css": "@layer utilities {
  .bg-\\[primary-15-15\\] {
    background-color: primary-15-15;
  }
}
",
  "styles": [],
  "variables": [],
}
`;

exports[`color-scheme > colors 7`] = `
{
  "candidates": [
    "bg-linear-to-t",
    "from-primary-50-50",
    "to-0-50-50",
  ],
  "css": "@layer utilities {
  .bg-linear-to-t {
    --tw-gradient-position: to top;
    @supports (background-image: linear-gradient(in lab, red, red)) {
      --tw-gradient-position: to top in oklab;
    }
    background-image: linear-gradient(var(--tw-gradient-stops));
  }
  .from-primary-50-50 {
    --tw-gradient-from: var(---color-primary-50-50);
    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
  }
  .to-0-50-50 {
    --tw-gradient-to: var(---color-0-50-50);
    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
  }
}

@property --tw-gradient-position {
  syntax: "*";
  inherits: false;
}
@property --tw-gradient-from {
  syntax: "<color>";
  inherits: false;
  initial-value: #0000;
}
@property --tw-gradient-via {
  syntax: "<color>";
  inherits: false;
  initial-value: #0000;
}
@property --tw-gradient-to {
  syntax: "<color>";
  inherits: false;
  initial-value: #0000;
}
@property --tw-gradient-stops {
  syntax: "*";
  inherits: false;
}
@property --tw-gradient-via-stops {
  syntax: "*";
  inherits: false;
}
@property --tw-gradient-from-position {
  syntax: "<length-percentage>";
  inherits: false;
  initial-value: 0%;
}
@property --tw-gradient-via-position {
  syntax: "<length-percentage>";
  inherits: false;
  initial-value: 50%;
}
@property --tw-gradient-to-position {
  syntax: "<length-percentage>";
  inherits: false;
  initial-value: 100%;
}
",
  "styles": [],
  "variables": [],
}
`;

exports[`color-scheme > light/dark 1`] = `
{
  "candidates": [
    "dark:container",
  ],
  "css": "@layer utilities {
  .dark\\:container {
    &:not(.light, .light *, .dark, .dark *) {
      @media (prefers-color-scheme: dark) {
        width: 100%;
        @media (width >= 640px) {
          max-width: 640px;
        }
        @media (width >= 768px) {
          max-width: 768px;
        }
        @media (width >= 1024px) {
          max-width: 1024px;
        }
        @media (width >= 1280px) {
          max-width: 1280px;
        }
        @media (width >= 1536px) {
          max-width: 1536px;
        }
      }
    }
    &:is(.dark, .dark *) {
      width: 100%;
      @media (width >= 640px) {
        max-width: 640px;
      }
      @media (width >= 768px) {
        max-width: 768px;
      }
      @media (width >= 1024px) {
        max-width: 1024px;
      }
      @media (width >= 1280px) {
        max-width: 1280px;
      }
      @media (width >= 1536px) {
        max-width: 1536px;
      }
    }
  }
}
",
  "styles": [],
  "variables": [],
}
`;

exports[`color-scheme > light/dark 2`] = `
{
  "candidates": [
    "light:container",
  ],
  "css": "@layer utilities {
  .light\\:container {
    &:not(.light, .light *, .dark, .dark *) {
      @media (prefers-color-scheme: light) {
        width: 100%;
        @media (width >= 640px) {
          max-width: 640px;
        }
        @media (width >= 768px) {
          max-width: 768px;
        }
        @media (width >= 1024px) {
          max-width: 1024px;
        }
        @media (width >= 1280px) {
          max-width: 1280px;
        }
        @media (width >= 1536px) {
          max-width: 1536px;
        }
      }
    }
    &:is(.light, .light *) {
      width: 100%;
      @media (width >= 640px) {
        max-width: 640px;
      }
      @media (width >= 768px) {
        max-width: 768px;
      }
      @media (width >= 1024px) {
        max-width: 1024px;
      }
      @media (width >= 1280px) {
        max-width: 1280px;
      }
      @media (width >= 1536px) {
        max-width: 1536px;
      }
    }
  }
}
",
  "styles": [],
  "variables": [],
}
`;
